--- a/style.css
+++ b/style.css
@@ -36,7 +36,6 @@ h2 {
 	margin-bottom: 10px;
 }
 
-
 #vyherka {
 	width: 550px;
 	min-height: calc(1em + 20px + 50px + 8px);
@@ -51,11 +50,10 @@ h2 {
 	box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
 }
 
-#seznam {
+#seznam, #pocitadlo {
 	font-size: 20px;
 	color: #3b518d;
 }
-
 
 .tlacitko {
 	margin-top: -20px;
